# firstGameProject

./: LICENSE  README.md  local.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/firstgameproject/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/game/: game_loop.cpp  game_loop.h
app/src/main/cpp/jni/: jni_bridge.cpp
app/src/main/cpp/models/: octagon.h  triangle.h  tyrannosaurus.h
app/src/main/cpp/platform/: egl_manager.cpp  egl_manager.h
app/src/main/cpp/render/: fgp_render.cpp  fgp_render.h
app/src/main/cpp/render/engine/: AObject.h  global.h  logger.h
app/src/main/cpp/render/engine/camera/: fgp_camera.cpp  fgp_camera.h  fgp_camera_config.h
app/src/main/cpp/render/engine/ebo/: fgp_ebo.cpp  fgp_ebo.h
app/src/main/cpp/render/engine/math/: fgp_math.cpp  fgp_math.h
app/src/main/cpp/render/engine/model/: fgp_mesh_material.h  fgp_meshdata.cpp  fgp_meshdata.h  fgp_model.cpp  fgp_model.h  fgp_primitive.cpp  fgp_primitive.h  fgp_primitive_textures.h
app/src/main/cpp/render/engine/shader/: fgp_shader.cpp  fgp_shader.h
app/src/main/cpp/render/engine/texture/: fgp_texture.cpp  fgp_texture.h
app/src/main/cpp/render/engine/vao/: fgp_vao.cpp  fgp_vao.h
app/src/main/cpp/render/engine/vbo/: fgp_vbo.cpp  fgp_vbo.h
app/src/main/java/com/firstgameproject/: FirstGameApplication.kt  MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
jks/: jks.jks
(+3 files in other folders)
